@@ -405,8 +405,20 @@ static int address_is_domain_catchall(deliver_to_user_t *delivery)
 		my_domain_dot = strchr(my_domain_dot, '.');
 
 		if (!my_domain_dot || my_domain_dot == my_domain) {
-			/* This is the way to fail out. */
+			/* This is one way to fail out, it means we have
+			 * somethign like @foo */
 			break;
+		}
+
+		if (my_domain_dot == my_domain + 1) {
+			/* We're looking at something like @.foo.bar.qux,
+			 * and my_domain_dot is pointed at .foo.bar.qux,
+			 * so we have to look one more character ahead. */
+			my_domain_dot = strchr(my_domain_dot + 1, '.');
+			if (!my_domain_dot) {
+				/* We're looking at @. so we're done. */
+				break;
+			}
 		}
 
 		/* Copy everything from the next dot to one after the at-sign,
